kiosk 1.0.2 Added color to box display Update README file

--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 kiosk
+
+This is an ongoing project written in C and compiled with the GNU
+compiler. It's an infinite loop that plays around with the "ncurses"
+library. I have to give credit to Dan Gookin who wrote the book 
+"Programmers Guide to ncurses" published by Wiley. Dan has a web
+page where you can download sample code. -ksand 10/5/14
